--- a/style.css
+++ b/style.css
@@ -202,6 +202,21 @@ body {
     height: 100vh;
 }
 
+
+/* body {
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: top;
+    background-image: url(./assets/img/em-my-3.jpg);
+    width: 100%;
+    height: 100%;
+    font-family: Arial, Helvetica;
+    letter-spacing: 0.02em;
+    font-weight: 400;
+    -webkit-font-smoothing: antialiased;
+} */
+
 @keyframes gradient {
     0% {
         background-position: 0% 50%;
